Version ClaSS-0.8.61 release (2008/12/20)
-----------------------------------------

Bugfix for alumni students. Leavers where getting community name='yid'
and not ='P:yid'. All should now be 'P:yid' with only current students
having name=yid.

Fixed a possible file vulnerability in the export script.



Version ClaSS-0.8.60 release (2008/12/15)
-----------------------------------------

Changed list_subject_components() to allow for components which cross
all subjects (subject_id=%) being careul that strands do not.

Allowed for multiple assessment profiles for the same currriculum
(crid/bid) areas by making use of the list_assessment_profiles
function in the MarkBook and changing umntype to be defined by
umnfilter. You now get one P filter button for each profile.

Included some of the non-standard absence codes into the calculation
of the attendance summary - without UA and UB were being counted as
absences.


Version ClaSS-0.8.59 release (2008/12/05)
-----------------------------------------

Made some be-spoke additions to the statistics page.

Changed the way the profile assessments are queried in the mark table
to allow for profiles with bid=%.

Made use of the rating_name field in categorydef table to define the
marktype to be used for summary profile columns in the MarkBook.

Added a new list script for profiles.

Allowed the new_assessment scripts to manage both profile assessments
and plain assessments.


Version ClaSS-0.8.58 release (2008/11/07)
-----------------------------------------

Made the xslt based functions compatible with PHP5 using a wrapper
library written by Alexandre Alapetite. These are principally used for
the publish to pdf button in reports. This depends upon the xsl module
for PHP5 being loaded (php5-xsl in Debian).

Work on import_students to allow using the enrolment number as a way
to doing multiple imports for existing students and not just new ones.

Added two fields to info table which allow for other personal ids